<resources>
    <string name="app_name">Lets_Learn</string>
    <string name="screen_image">screen_image</string>
    <string name="let_s">Let\'s</string>
    <string name="learn">Learn</string>
    <string name="write_your_feedback_here">Write your feedback here...</string>
    <string name="post">Post</string>
    <string name="learn_activity">Learn Activity</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="maths">Maths</string>
    <string name="login">Login</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="submit">Submit</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="remember_me">remember me</string>
    <string name="colors" />
    <string name="fruits" />
    <string name="Vegetables" />
    <string name="colour">Colors</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">stop</string>
    <string name="vegetables">Vegetables</string>
    <string name="Fruits">Fruits</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="alphabets">Alphabets</string>
    <string name="todo">TODO</string>
    <string name="counting">Counting</string>
    <string name="_1">1</string>
</resources>