<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/imageView6"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MathActivity">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.2"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/screen"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="216dp"
            android:layout_height="96dp"
            android:fontFamily="cursive"
            android:text="@string/counting"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_45sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061" />

        <Button
            android:id="@+id/Mathabtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="@string/_1"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179" />

        <Button
            android:id="@+id/Mathbbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="2"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathabtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <Button
            android:id="@+id/Mathcbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="3"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathbbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.81"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <Button
            android:id="@+id/Mathdbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="4"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathcbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.276" />

        <Button
            android:id="@+id/Mathebtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="5"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathdbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.276" />

        <Button
            android:id="@+id/Mathfbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="6"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathebtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.81"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.282" />

        <Button
            android:id="@+id/Mathgbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="7"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathfbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.374" />

        <Button
            android:id="@+id/Mathhbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="8"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathgbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372" />

        <Button
            android:id="@+id/Mathibtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="9"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathhbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.376" />

        <Button
            android:id="@+id/Mathjbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="10"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathibtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.475" />

        <Button
            android:id="@+id/Mathkbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="11"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathjbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.478" />

        <Button
            android:id="@+id/Mathlbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="12"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathkbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.474" />

        <Button
            android:id="@+id/Mathmbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="13"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathlbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567" />

        <Button
            android:id="@+id/Mathnbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="14"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathmbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567" />

        <Button
            android:id="@+id/Mathobtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="15"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathnbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567" />

        <Button
            android:id="@+id/Mathpbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="16"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathobtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.657" />

        <Button
            android:id="@+id/Mathqbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="17"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathpbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.658" />

        <Button
            android:id="@+id/Mathrbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="18"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathqbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.658" />

        <Button
            android:id="@+id/Mathsbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="19"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathrbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.186"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.752" />

        <Button
            android:id="@+id/Mathtbtn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:background="@drawable/quiz_btn"
            android:shadowColor="#FFAD29"
            android:text="20"
            android:layout_marginTop="@dimen/_10sdp"
            android:accessibilityTraversalAfter="@id/Mathsbtn"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.752" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

